# NetMaestro

./: .copier-answers.resonant.yml  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  Procfile  README.md  biome.jsonc  docker-compose.override.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  tox.ini
.github/workflows/: ci.yml
dev/: .env.docker-compose  .env.docker-compose-native
net_maestro/: __init__.py  celery.py  urls.py
net_maestro/core/: apps.py  constants.py  views.py
net_maestro/core/admin/: __init__.py  event_file.py  event_record.py  run.py  simulation_file.py  simulation_kp_record.py  simulation_lp_record.py  simulation_pe_record.py
net_maestro/core/management/commands/: data_ingest.py
net_maestro/core/migrations/: 0001_default_site.py  0002_initial.py  0003_eventfile_eventrecord.py  0004_alter_eventfile_run_alter_eventrecord_event_file.py  0004_alter_run_description.py  0005_add_simulation_file.py  0006_add_simultion_pe_record.py  0007_add_simultion_kp_and_lp_records.py
net_maestro/core/models/: __init__.py  event_file.py  event_record.py  run.py  simulation_file.py  simulation_kp_record.py  simulation_lp_record.py  simulation_pe_record.py
net_maestro/core/parsers/: __init__.py  base.py  event_trace_file.py  model_file.py  ross_binary_file.py  schema.py
net_maestro/core/rest/: data_api.py  user.py
net_maestro/core/static/net_maestro/: customStyles.css  dataStore.js  init.js  main.js  uiStateStore.js
net_maestro/core/static/net_maestro/partials/: dataFileSelector.js
net_maestro/core/static/net_maestro/plots/: heatmap.js  networkTimePlot.js  parallelCoords.js  scatterPlot.js  timePlot.js
net_maestro/core/tasks/: __init__.py  events.py  simulation.py
net_maestro/core/templates/: index.html
net_maestro/core/templates/components/: scatterPlot.html  sidebar.html
net_maestro/core/templates/net_maestro/: analysis.html  index.html
net_maestro/core/templates/net_maestro/core/: index.html
net_maestro/core/templates/net_maestro/core/components/: scatterPlot.html  sidebar.html
net_maestro/core/templates/net_maestro/core/components/plots/: scatterPlot.html  timePlot.html
net_maestro/core/templates/net_maestro/plots/: heatmap.html  networkTimePlot.html  parallelCoords.html  scatterPlot.html  timePlot.html
net_maestro/core/templates/net_maestro/shared/: dataFileSelector.html  sidebar.html
net_maestro/core/tests/: conftest.py  factories.py  test_smoke.py
net_maestro/settings/: base.py  development.py  heroku_production.py  production.py  testing.py
staticfiles/js/: scatterPlot.js  timePlot.js
terraform/: django.tf  main.tf
