[build-system]
requires = ["hatchling==1.29.0"]
build-backend = "hatchling.build"

[project]
name = "net-maestro"
version = "0.0.0"
requires-python = ">=3.13"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
classifiers = ["Private :: Do Not Upload"]
dependencies = [
  # Runtime dependencies, always needed
  "celery==5.6.2",
  "django[argon2]==6.0.2",
  "django-allauth==65.14.3",
  "django-auth-style==0.14.0",
  "django-click==2.5.0",
  "django-cors-headers==4.9.0",
  "django-environ==0.12.1",
  "django-extensions==4.1",
  "django-filter==25.2",
  "django-oauth-toolkit==3.2.0",
  "django-resonant-settings[allauth,celery]==0.48.1",
  "django-resonant-utils[allauth,s3_storage]==0.18.0",
  "django-stubs-ext==5.2.9",
  "djangorestframework==3.16.1",
  "drf-yasg==1.21.14",
  "pandas==3.0.0",
  "psycopg[binary]==3.3.2",
  "rich==14.3.2",
  "whitenoise[brotli]==6.11.0",
  # Production-only
  "django-s3-file-field[s3]==1.1.0",
  "django-storages[s3]==1.14.6",
  "sentry-sdk[celery,django,pure_eval]==2.53.0",
  "gunicorn==25.1.0",
]

[project.optional-dependencies]
development = [
  # Runtime dependencies, only needed with "development" settings
  "django-browser-reload==1.21.0",
  "django-debug-toolbar==6.2.0",
  "django-minio-storage==0.5.9",
  "django-resonant-utils[minio_storage]==0.18.0",
  "django-s3-file-field[minio]==1.1.0",
  "ipython==9.10.0",
  "watchdog==6.0.0",
  "werkzeug==3.1.5",
]

[dependency-groups]
dev = [
  # Additional developer tools
  # The "dev" dependency group is installed by default,
  # so use this to install "development" extras by default too
  "net-maestro[development]",
  "pre-commit==4.5.1",
  "tox==4.36.1",
  "tox-uv==1.29.0",
]
lint = [
  "ruff==0.15.1",
]
type = [
  "mypy==1.19.1",
  "celery-types==0.24.0",
  "django-stubs[compatible-mypy]==5.2.9",
  "djangorestframework-stubs[compatible-mypy]==3.16.8",
]
test = [
  "factory-boy==3.3.3",
  "pytest==9.0.2",
  "pytest-django==4.12.0",
  "pytest-mock==3.15.1",
  # Enable with "pytest --random-order ..."
  "pytest-random-order==1.2.0",
  # Enable with "pytest --count=... ..."
  "pytest-repeat==0.9.4",
]

[tool.hatch.build]
only-include = [
  "net_maestro",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  # Incompatible with formatter
  # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  "COM812", # missing-trailing-comma
  "COM819", # prohibited-trailing-comma
  "D206", # docstring-tab-indentation
  "D300", # triple-single-quotes
  "E111", # indentation-with-invalid-multiple
  "E114", # indentation-with-invalid-multiple-comment
  "E117", # over-indented
  "ISC001", # single-line-implicit-string-concatenation
  "ISC002", # multi-line-implicit-string-concatenation
  "Q", # flake8-quotes
  "W191", # tab-indentation

  # Incompatible with Django
  "A003", # builtin-attribute-shadowing
  "ARG001", # unused-function-argument
  "ARG002", # unused-method-argument
  "RUF012", # mutable-class-default

  # Overly burdensome
  "ANN", # flake8-annotations
  "D1", # undocumented-*
  "EM", # flake8-errmsg
  "ERA001", # commented-out-code
  "FIX", # flake8-fixme
  "PLR2004", # magic-value-comparison
  "RET505", # superfluous-else-return
  "RET506", # superfluous-else-raise
  "RET507", # superfluous-else-continue
  "RET508", # superfluous-else-break
  "TD002", # missing-todo-author
  "TD003", # missing-todo-link
  "TRY003", # raise-vanilla-args

  # Project-specific
]

[tool.ruff.lint.per-file-ignores]
"**/migrations/**" = [
  "N806", # non-lowercase-variable-in-function
  "RUF012", # mutable-class-default
]
"**/settings/**" = [
  "F403", # undefined-local-with-import-star
  "F405", # undefined-local-with-import-star-usage
]
"**/settings/{development,testing}.py" = [
  "S105", # hardcoded-password-string
]
"**/tests/**" = [
  "DJ007", # django-all-with-model-form
  "DJ008", # django-model-without-dunder-str
  "INP001", # implicit-namespace-package
  "PLR0913", # too-many-arguments
  "S", # flake8-bandit
  "SLF001", # private-member-access
]

[tool.ruff.lint.flake8-boolean-trap]
extend-allowed-calls = ["pydantic.Field", "django.db.models.Value"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["ninja.Query"]

[tool.ruff.lint.flake8-self]
extend-ignore-names = ["_base_manager", "_default_manager",  "_meta"]

[tool.ruff.lint.isort]
# Sort by name, don't cluster "from" vs "import"
force-sort-within-sections = true
# Deferred annotations allows TC* rules to move more imports into TYPE_CHECKING blocks
required-imports = ["from __future__ import annotations"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder", "resonant-settings"]
sections = {"resonant-settings" = ["resonant_settings"] }

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.mypy]
files = [
  "net_maestro",
]
check_untyped_defs = true
ignore_missing_imports = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
plugins = [
  "mypy_django_plugin.main",
  "mypy_drf_plugin.main",
]

[tool.django-stubs]
django_settings_module = "net_maestro.settings.testing"

[tool.pytest.ini_options]
addopts = [
  # Test utilities should be imported absolutely from the pythonpath,
  # so use the Pytest-recommended "importlib" mode
  "--import-mode=importlib",
  "--strict-config",
  "--strict-markers",
  "--showlocals",
  "--verbose",
  # Specifying as "--ds" will override any value in the environment
  "--ds=net_maestro.settings.testing",
]
filterwarnings = [
  "error",
  # pytest often causes unclosed socket warnings
  'ignore:unclosed <socket\.socket:ResourceWarning',
]
